--- a/find_median/WORKSPACE
+++ b/find_median/WORKSPACE
@@ -3,5 +3,5 @@ load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 git_repository(
     name = "googletest",
     remote = "https://github.com/google/googletest",
-    tag = "release-1.10x",
+    commit = "703bd9caab50b139428cea1aaff9974ebee5742e"
 )
